--- a/resources/assets/sass/global.scss
+++ b/resources/assets/sass/global.scss
@@ -1,14 +1,20 @@
 body {
     font-family: 'Roboto', sans-serif;
-    background-color: #212121;
+    background-color: #3c4452;
+}
+a{
+    color: #00b5a8;
+    &:hover{
+        color: #00b5a8;
+    }
 }
 .btn.btn-primary {
-    background-color: #212121;
+    background-color: transparent;
     border-color: #ffffff;
 
     &:hover {
-        background-color: #867FF9;
-        border-color: #867FF9;
+        background-color: #00b5a8;
+        border-color: #00b5a8;
     }
 }
 .form-control {
@@ -18,10 +24,18 @@ body {
     color: #ccc;
     &:focus {
         color: #ccc;
-        border-bottom: 2px solid #867FF9 !important;
+        border-bottom: 2px solid #00b5a8 !important;
     }
 }
 
 .pointer { 
     cursor: pointer;
+}
+
+.svg-inline--fa{
+
+}
+
+.form-control:focus{
+    box-shadow: none!important;
 }
